--- a/css/main.css
+++ b/css/main.css
@@ -1,33 +1,48 @@
-body, html {
+body, 
+html {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   color: #7d97ad;
   overflow-x: hidden;
   position: relative;
 }
-header, nav, footer, section, article, div, img{
+
+header, 
+nav, 
+footer, 
+section, 
+article, 
+div, 
+img {
   box-sizing: border-box;
 }
-h1, h2, h3{
+
+h1,
+h2,
+h3 {
   margin: 5px;
   font-weight: inherit;
 }
-h4{
+
+h4 {
   font-size: 2em;
   margin: 5px;
 }
-ul{
+
+ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-li{
+
+li {
   padding: 1em;
 }
-img{
+
+img {
   max-width: 100%;
 }
 
@@ -38,28 +53,31 @@ img{
  *
  */
 
- .header{
+ .header {
   display: flex;
   flex-wrap: wrap;
   min-height: 110px;
   transition: min-height 0.3s;
 }
 
-.header__line{
+.header__line {
   width: 98%;
   margin-left: auto;
   margin-right: auto;
   border-bottom: 3px solid #7d97ad;
 }
-.header__logo{
+
+.header__logo {
   text-align: left;
   padding: 0.6em;
   width: 20%
 }
-.header__logo img{
+
+.header__logo img {
   max-width: 90px;
 }
-.header__intro{
+
+.header__intro {
   color:#2d3c49;
   font-size: 1.2em;
   text-align: right;
@@ -107,7 +125,8 @@ img{
   text-decoration: underline;
   color: #212121;
 }
-.burger__menu{
+
+.burger__menu {
   display: none;
 }
 
@@ -117,7 +136,7 @@ img{
  *
  */
 
-main{
+main {
   margin-left: auto;
   margin-right: auto;
 }
@@ -128,7 +147,7 @@ main{
  *
  */
 
-.content{
+.content {
   display: flex;
   flex-wrap: wrap;
 }
@@ -139,7 +158,7 @@ main{
  *
  */
  
-.main__image{
+.main__image {
   width: 100%;
   position: relative;
   background-image: url("../img/front1.png");
@@ -147,15 +166,17 @@ main{
   height: 350px;
   margin: 1%;
 }
-.description{
+
+.description {
   font-size: 2em;
-  color: grey;
+  color: rgb(128, 128, 128);
   position: relative;
   top: 20%;
   left: 10%;
 }
-.description em{
-  color: yellowgreen;
+
+.description em {
+  color: rgb(154, 205, 50);
 }
 
 /*
@@ -164,50 +185,52 @@ main{
  *
  */
 
-.work{
+.work {
   width: 100%;
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
   padding: .1em 2em;
 }
+
 /*
  *
  * Small Image
  *
  */
 
-.small__image{
+.small__image {
   width: 32%;
 }
 
-.small__image h1{
+.small__image h1 {
   color:#2d3c49;
   text-align: center;
   font-size: 2em;
 }
-.small__image a{
+
+.small__image a {
   color:#2d3c49;
   text-decoration: none;
 }
-.small__image a:hover{
+
+.small__image a:hover {
   font-weight: 700;
 }
 
-#left{
+#left {
   margin-left: auto;
   position: relative;
   height: 220px;
 }
 
-#center{
- 
+#center {
   margin-left: auto;
   margin-right: auto;
   position: relative;
   height: 220px;
 }
-#right{
+
+#right {
   margin-right: auto;
-  
   position: relative;
   height: 220px;
 }
